# butter

./: .gitignore  CONTRIBUTING.md  Justfile  README.md  pyproject.toml
.claude/agents/: ci-build-sync.md  docs-auditor.md
.claude/rules/: auto-agents.md  auto-test.md  justfile.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/butter/: cli.py
src/butter_tree/: cli.py  doctor.py
tests/: test_cli.py
