[project]
name = "butter-tree"
version = "0.1.0"
description = "BTRFS-backed isolated development environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.3",
]

[project.scripts]
butter = "butter_tree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/butter_tree"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.9",
]
